--- a/index.html
+++ b/index.html
@@ -94,26 +94,27 @@ body, html {
 <body>
 <div class="row">
   <div class="column">
-    <img src="" alt="" style="width:100%" height="250">
+    <img src="" alt="Baiwei Liu" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="" style="width:100%" height="250">
+    <img src="" alt="Yitao Ma" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="" style="width:100%" height="250">
+    <img src="" alt="Xin Lin" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="" style="width:100%" height="250">
+    <img src="" alt="Yuxiang Huang" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="" style="width:100%" height="250">
+    <img src="" alt="Wenlao Peng" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="" style="width:100%" height="250">
+    <img src="" alt="Hang Yang" style="width:100%" height="250">
   </div>
 </div>
 
 <div>
+  <p> <h5><center> Personal Information </center></h5></p>
   <p> <b> Baiwei Liu </b></p>
   <p> 
     My Full Name is Baiwei Liu, my English name is “Bailey”, my student email address is s3778909@student.rmit.edu.au. 
@@ -184,7 +185,71 @@ body, html {
     I would like to develop my database skills through this course. Like all of the members in our group, the challenge is to cooperate with teammates and present a good project. 
     To contribute in this team, I can do the coding stuff and probably give some advice on how we can improve our project.
   </p>
+</div>
 
+<div>
+  <p> <h5><center> Resources and Tools </center></h5></p>
+  <p>
+    <ul>
+        <li>
+          <b>Github:</b>
+          <p>
+          Github has been a helpful instrument in completing this project.
+          Through Git, we could identify who modified the codes, who added their work and which part they have changed.
+          It was also easier to use as the platform is simple to understand, even for someone that does not really have deep knowledge in IT.
+          </p>
+        </li>
+        <li>
+          <b>Eclipse:</b>
+          <p>
+          Eclipse is an open source, Java based, extensible development platform, and it is completely free of charge.
+          It  makes it a development tool for C + +, python, PHP and other languages through plug-ins.
+          We can write code in the eclipse to build our Java based project.
+          We use this tool because it is simple and necessary for a Java based project.
+          Alternatively we can use IntelliJ IDE or NetBeans as the programming tool, these are also free and helpful tools.
+          </p>
+        </li>
+        <li>
+          <b> Visual Studio Code </b>
+          <p>
+            Visual studio code (vs Code) is a free code editor developed by Microsoft and supports windows, Linux and MacOS operating systems.
+            It is usually used for web development, it is a good tool as it contains several features such as code completion, code fragment and code refactoring.
+            The editor supports user personalization, such as changing theme color, keyboard shortcut and other attributes and parameters.
+          </p>
+        </li>
+    </ul>
+  </p>
+</div>
+
+<div>
+  <p> <h5><center> Collaborative Workspaces </center></h5></p>
+  <p>
+    <center> <a href="https://trello.com/b/GrrGPFy7/hd"> Trello Board </a> </center>
+  </p>
+  <p>
+    <center> <a href="https://github.com/HangYang/BITassignmentpart1"> HD Git Repository </a> </center>
+  </p>
+</div>
+
+<div>
+  <p> <h5><center> Communication Expectations </center></h5></p>
+  <p>
+
+  </p>
+</div>
+
+<div>
+  <p> <h5><center> Decision-making Processes </center></h5></p>
+  <p>
+
+  </p>
+</div>
+
+<div>
+  <p> <h4><center> GROUP CONTRACT </center></h4></p>
+  <p>
+
+  </p>
 </div>
 
 
