--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#teamprofile" class="w3-bar-item w3-button w3-hide-small"> TEAM PROFILE</a>
+    <a href="#personalinformation" class="w3-bar-item w3-button w3-hide-small"> TEAM PROFILE</a>
     <a href="#tools" class="w3-bar-item w3-button w3-hide-small"> PROJECT DESCRIPTION</a>
     <a href="#industrydata" class="w3-bar-item w3-button w3-hide-small"> DEMONSTRATE OUTCOMES</a>
     <a href="#itwork" class="w3-bar-item w3-button w3-hide-small">PROJECT JUSTIFICATION</a>
-    <a href="#ittechnologies" class="w3-bar-item w3-button w3-hide-small">RESOURCES AND TOOLS</a>
-    <a href="#projectideas" class="w3-bar-item w3-button w3-hide-small">GROUP CONTRACT</a>
+    <a href="#resourcesandtools" class="w3-bar-item w3-button w3-hide-small">RESOURCES AND TOOLS</a>
+    <a href="#groupcontract" class="w3-bar-item w3-button w3-hide-small">GROUP CONTRACT</a>
+    <a href="#projecttimetable" class="w3-bar-item w3-button w3-hide-small">PROJECT TIMETABLE</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
     </a>
@@ -58,17 +59,20 @@ body, html {
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#teamprofile" class="w3-bar-item w3-button" onclick="toggleFunction()">PROFILE</a>
-    <a href="#industrydata" class="w3-bar-item w3-button" onclick="toggleFunction()">INDUSTRY DATA</a>
-    <a href="#projectidea" class="w3-bar-item w3-button" onclick="toggleFunction()">PROJECT IDEA</a>
+    <a href="#industrydata" class="w3-bar-item w3-button" onclick="toggleFunction()">PROJECT</a>
+    <a href="#groupcontract" class="w3-bar-item w3-button" onclick="toggleFunction()">GROUP CONTRACT</a>
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
 
 
 <!-- Container (Team Profile Section) -->
+
 <div class="w3-content w3-container w3-padding-64" id="teamprofile">
-  <h3 class="w3-center">TEAM PROFILE</h3>
-  <p> <h5> <center> HD </h5> </center> </p>
+  <h1 class="w3-center"> ASSIGNMENT PART 1</h1>
+  <h3 class="w3-center"> COSC2625 BUILDING IT SYSTEMS</h3>
+  <h3 class="w3-center"> AR-TH-930-HD </h3>
+  <h3 class="w3-center"> Online Gaming Store </h3>
   
 <!-- Group member photos -->
     <picture>
@@ -113,7 +117,7 @@ body, html {
   </div>
 </div>
 
-<div>
+<div class="w3-content w3-container w3-padding-64" id="personalinformation">
   <p> <h5><center> Personal Information </center></h5></p>
   <p> <b> Baiwei Liu </b></p>
   <p> 
@@ -187,7 +191,7 @@ body, html {
   </p>
 </div>
 
-<div>
+<div class="w3-content w3-container w3-padding-64" id="resourcesandtools">
   <p> <h5><center> Resources and Tools </center></h5></p>
   <p>
     <ul>
@@ -221,7 +225,7 @@ body, html {
   </p>
 </div>
 
-<div>
+<div class="w3-content w3-container w3-padding-64" id="collaborativeworkplaces">
   <p> <h5><center> Collaborative Workspaces </center></h5></p>
   <p>
     <center> <a href="https://trello.com/b/GrrGPFy7/hd"> Trello Board </a> </center>
@@ -231,22 +235,29 @@ body, html {
   </p>
 </div>
 
-<div>
+<div class="w3-content w3-container w3-padding-64" id="communicationexpectation">
   <p> <h5><center> Communication Expectations </center></h5></p>
   <p>
 
   </p>
 </div>
 
-<div>
+<div class="w3-content w3-container w3-padding-64" id="decisionmakingprocesses">
   <p> <h5><center> Decision-making Processes </center></h5></p>
   <p>
 
   </p>
 </div>
 
-<div>
+<div class="w3-content w3-container w3-padding-64" id="groupcontract">
   <p> <h4><center> GROUP CONTRACT </center></h4></p>
+  <p>
+
+  </p>
+</div>
+
+<div class="w3-content w3-container w3-padding-64" id="projecttimetable">
+  <p> <h4><center> Project Timetable </center></h4></p>
   <p>
 
   </p>
