--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ body, html {
       <i class="fa fa-bars"></i>
     </a>
     <a href="#personalinformation" class="w3-bar-item w3-button w3-hide-small"> TEAM PROFILE</a>
-    <a href="#tools" class="w3-bar-item w3-button w3-hide-small"> PROJECT DESCRIPTION</a>
-    <a href="#industrydata" class="w3-bar-item w3-button w3-hide-small"> DEMONSTRATE OUTCOMES</a>
-    <a href="#itwork" class="w3-bar-item w3-button w3-hide-small">PROJECT JUSTIFICATION</a>
+    <a href="project.html#projectdescription" class="w3-bar-item w3-button w3-hide-small"> PROJECT DESCRIPTION</a>
+    <a href="project.html#projectdemonstrateoutcome" class="w3-bar-item w3-button w3-hide-small"> DEMONSTRATE OUTCOMES</a>
+    <a href="project.html#projectjustification" class="w3-bar-item w3-button w3-hide-small">PROJECT JUSTIFICATION</a>
     <a href="#resourcesandtools" class="w3-bar-item w3-button w3-hide-small">RESOURCES AND TOOLS</a>
     <a href="#groupcontract" class="w3-bar-item w3-button w3-hide-small">GROUP CONTRACT</a>
     <a href="#projecttimetable" class="w3-bar-item w3-button w3-hide-small">PROJECT TIMETABLE</a>
@@ -232,6 +232,9 @@ body, html {
   </p>
   <p>
     <center> <a href="https://github.com/HangYang/BITassignmentpart1"> HD Git Repository </a> </center>
+  </p>
+  <p>
+  <center> MSTeam Private Channel -- AR-TH-930-HD</center>
   </p>
 </div>
 
