project justification update

--- a/project.html
+++ b/project.html
@@ -110,8 +110,79 @@ body, html {
 
 <div class="w3-content w3-container w3-padding-64" id="projectjustification">
   <p> <h5><center> Project Justification </center></h5></p>
+  <p> <b> 1. Workload </b> </p>
   <p>
+    We are expecting at least forming up one group meeting per week,
+    and the duration of each meeting should be at least one hour to share what we have done for the project individually.
+  </p>
 
+  <p> <b> 2. Beyong Current Capabilities </b> </p>
+  <p>
+    Most of our team members are good at html development,
+    java programming and database skills are the areas that the majority of us are looking forward to improving.
+  </p>
+
+  <p> <b> 3. Project Risks and Challenges</b> </p>
+  <p>
+    Risks are the facts that discourages a project where the team members must face and overcome it.
+    Decisions make risks more powerful and sometimes avoid them without any problem.
+    Unfortunately, there are some risks and challenge that we will have to face while developing our project as team members.
+  <ul>
+    <li>
+      <b> Data Security: </b>
+      <p>
+        Data is the most significant aspect in the tech industry where the security of data breaches most of the time.
+        Data of the project should not leak outside.
+        Project data is sensitive, and all our team members should work to protect them with responsibility and care throughout the process.
+        Also, data of the users must be protected and  implement a better security plan for the application.
+      </p>
+    </li>
+    <li>
+      <b> User Group: </b>
+      <p>
+        Developing an application for the wrong target users is a nightmare that can have as a project itself.
+        If the chosen target user group refuses the app,
+        it will be one of the biggest risks that can happen to a project after creating the application because it costs the money and hard work which the whole team spent through the process.
+        Also, it will be the failure of the application in the first place.
+      </p>
+    </li>
+    <li>
+      <b> Game Type: </b>
+      <p>
+        Games are now diverse and complicate. It is important to choose the type of games that we are supposed to develop.
+        As our project is face to the whole society, this means our customers may be teenagers under 18 or adults.
+        Therefore, games that we develop should consider the scale, which cannot be too violent and sexual related.
+      </p>
+    </li>
+  </ul>
+  <p><b> Team Dynamics related challenges: </b></p>
+  <ul>
+    <li>
+      <b> Number of Group Meetings </b>
+      <p>
+        Since every team members are busy with different subjects and lots of assessments,
+        it will be a challenge for us to gather together and have meetings.
+        And also, in the situation like this, the only way to communicate is through online meeting.
+        However, we will find out solutions for this after few weeks' collaboration, and hope we can overcome this challenge.
+      </p>
+    </li>
+    <li>
+      <b> Wide Spectrum of Opinions </b>
+      <p>
+        As a group of six members, everyone has their own opinions and ideas.
+        When it comes to draw a conclusion or make a decision, it will be difficult to finalize it.
+      </p>
+    </li>
+    <li>
+      <b> Jump out of "Comfort Zone' and Collaborate </b>
+      <p>
+        Six members may good at six different domains. It is challenge to acknowledge what we are good at and what we expect to improve.
+        However, this does not mean members in the team should do all things that they not very good at.
+        It is to collaborate and give full play to the best of the individual to help the team,
+        in order to get high score.
+      </p>
+    </li>
+  </ul>
   </p>
 </div>
 
