--- a/index.html
+++ b/index.html
@@ -262,7 +262,29 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="projecttimetable">
   <p> <h4><center> Project Timetable </center></h4></p>
   <p>
-
+    <table border="1" align="center">
+      <tr>
+        <th align="center"> Title </th>
+        <th align="center"> Planned Start </th>
+        <th align="center"> Planned Due </th>
+        <th align="center"> Lead by </th>
+      </tr>
+      <tr>
+        <th align="left" colspan="4"> Week 3 </th>
+      </tr>
+      <tr>
+        <th align="center"> [Create Dropdown for front page] </th>
+        <th align="center"> [2/9] </th>
+        <th align="center"> [1/9] </th>
+        <th align="center"> [Dennis Ritchie] </th>
+      </tr>
+      <tr>
+        <th align="center"> [Create Dropdown for front page] </th>
+        <th align="center"> [2/9] </th>
+        <th align="center"> [1/9] </th>
+        <th align="center"> [Dennis Ritchie] </th>
+      </tr>
+    </table>
   </p>
 </div>
 
