--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@ body, html {
 
   <p> <b> Xin Lin </b></p>
   <p>
-    Student Email: s3710267@student.rmit.edu.au
-    My name is Xin Lin, you can call me Lynn. I am from China, and I came to Australia to study in 2018. 
-    Before that, I finished my international business studies in China. Then I worked for a year. 
-    I found that I was not interested in business, and then came to Australia to continue my study. 
-    This is my second year of studying information technology. In terms of database and Java, I think it needs to be improved. 
+    Student Email: s3710267@student.rmit.edu.au<br>
+    My name is Xin Lin, you can call me Lynn. I am from China, and I came to Australia to study in 2018. Before that, I finished my international business studies in China. 
+    Then I worked for a year. I found that I was not interested in business, and then came to Australia to continue my study. 
+    This is my second year of studying information technology. I just graduated from the Diploma of Information Technology last year. 
+    In the process of learning IT, I think I am good at web programming, and I am very interested in it. In terms of database and Java, I think it needs to be improved. 
+    I will do my best in this team project, work hard with the team members, and learn the aspects I am not good at.
   </p>
 
   <p> <b> Yuxiang Huang ( Project Leader )</b></p>
