--- a/project.html
+++ b/project.html
@@ -99,7 +99,7 @@ body, html {
   <p>
 <p><h6>Project Name:</h6></p>
       <p>Online Game Store (Web page)</p>
-      <p><h6>Project Description:</6></p>
+      <p><h6>Project Description:</h6></p>
         <p>We are thinking about building a website for a game store. Our website will use html,css,javascript,php as the basis. There will be databases to store user information and product information. There will also be a game page to use in java.
 <br>Our website will have five pages. (home page, about us page, store page, play with us page, contact us page) The main page will have some game information, such as new games or upcoming games. In the about us page, there will be information about our company, our team members, etc. In the store page, users can login and purchase products. These include games, game related or online exchange codes. We also created a special web page called “play with us”. In this page, we provide a small game and we will make a ranking list. All login users can challenge high scores. Finally is the contact us page, there will be a form through which users can submit any questions they have.
   </p>
