--- a/project.html
+++ b/project.html
@@ -97,19 +97,22 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="projectdescription">
   <p> <h5><center> Project Description </center></h5></p>
   <p>
+<p> <h5><center> Project Description </center></h5></p>
+  <p>
 <p><h6>Project Name:</h6></p>
       <p>Game Store</p>
       <p><h6>Project Description:</h6></p>
-        <p>We are thinking about building a website for a game store. And the most important is that how to attract customers.
+        <p>We are thinking about building a website for a game store. And the most important is how to attract customers.
           <br>Our website will use html,css,javascript,php as the basis. 
-          There will be databases to store user information and product information. There will also be a online game page to use in java.
-          <br>Our website will have four pages with drop-down menu fuction. (home page, store page, play with us page, contact us page) 
+          There will be databases to store user information and product information. There will also be an online game page to use in java.
+          <br>Our website will have four pages with a drop-down menu function.  (home page, store page, play with us page, contact us page) 
           The main page will have some game information, such as gaming news, new games, upcoming games and discount games. These will be displayed separately using the drop-down menu function.
           In the store page, users can login and purchase products. These include games on different platforms, game related and Gaming devices. 
           We also created a special web page called “play with us”. In this page, we provide a small game and we will make a ranking list. 
           All users can challenge high scores. According to the score of the ranking list, get the corresponding discount. The ranking list will update every day.
-          Finally is the contact us page, there will be a form through which users can submit any questions they have. Also there have an about us page can be displayed in the drop-down menu.
+          Finally is the contact us page, there will be a form through which users can submit any questions they have. Also there is an about us page can be displayed in the drop-down menu.
   </p>
+
 </div>
 
 <div class="w3-content w3-container w3-padding-64" id="desmonstrateoutcome">
