--- a/project.html
+++ b/project.html
@@ -201,7 +201,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#teamprofile" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#project" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <p> COPYRIGHT &copy; HD 2020 </p>
   <div class="w3-xlarge w3-section">
   </div>  
