--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@ body, html {
     </a>
     <a href="index.html#personalinformation" class="w3-bar-item w3-button w3-hide-small"> TEAM PROFILE</a>
     <a href="project.html#projectdescription" class="w3-bar-item w3-button w3-hide-small"> PROJECT DESCRIPTION</a>
-    <a href="project.html#projectdemonstrateoutcome" class="w3-bar-item w3-button w3-hide-small"> DEMONSTRATE OUTCOMES</a>
+    <a href="project.html#projectdesmonstrateoutcome" class="w3-bar-item w3-button w3-hide-small"> DEMONSTRATE OUTCOMES</a>
     <a href="project.html#projectjustification" class="w3-bar-item w3-button w3-hide-small">PROJECT JUSTIFICATION</a>
     <a href="index.html#resourcesandtools" class="w3-bar-item w3-button w3-hide-small">RESOURCES AND TOOLS</a>
     <a href="index.html#groupcontract" class="w3-bar-item w3-button w3-hide-small">GROUP CONTRACT</a>
@@ -96,10 +96,7 @@ body, html {
 
 <div class="w3-content w3-container w3-padding-64" id="projectdescription">
   <p> <h5><center> Project Description </center></h5></p>
-  <p>
-<p> <h5><center> Project Description </center></h5></p>
-  <p>
-<p><h6>Project Name:</h6></p>
+  <p><h6>Project Name:</h6></p>
       <p>Game Store</p>
       <p><h6>Project Description:</h6></p>
         <p>We are thinking about building a website for a game store. And the most important is how to attract customers.
@@ -115,7 +112,7 @@ body, html {
 
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="desmonstrateoutcome">
+<div class="w3-content w3-container w3-padding-64" id="projectdesmonstrateoutcome">
   <p> <h5><center> Desmonstrate Outcomes <center></h5></p>
       
   </p>
