--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body, html {
     <img src="" alt="Wenlao Peng" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="Hang Yang" style="width:100%" height="250">
+    <img src="bank.jpg" alt="Hang Yang" style="width:100%" height="250">
   </div>
 </div>
 
