--- a/index.html
+++ b/index.html
@@ -274,17 +274,36 @@ body, html {
         <th align="left" colspan="4"> Week 3 </th>
       </tr>
       <tr>
-        <th align="center"> [Create Dropdown for front page] </th>
-        <th align="center"> [2/9] </th>
-        <th align="center"> [1/9] </th>
-        <th align="center"> [Dennis Ritchie] </th>
+        <th align="center"> Meeting and assign tasks </th>
+        <th align="center"> 8/10/2020 </th>
+        <th align="center"> 8/11/2020 </th>
+          <th align="center"> Wenlao Peng </th>
       </tr>
       <tr>
-        <th align="center"> [Create Dropdown for front page] </th>
-        <th align="center"> [2/9] </th>
-        <th align="center"> [1/9] </th>
-        <th align="center"> [Dennis Ritchie] </th>
+        <th align="center"> Writing html model for website </th>
+        <th align="center">   8/11/2020 </th>
+        <th align="center">  8/11/2020 </th>
+        <th align="center"> Hang Yang </th>
       </tr>
+      <tr>
+        <th align="center"> Project document </th>
+        <th align="center">   8/11/2020 </th>
+        <th align="center">  8/12/2020 </th>
+        <th align="center"> all team members, details on the front of document </th>
+      </tr>
+      <tr>
+        <th align="center"> Design Trolle </th>
+        <th align="center">   8/13/2020 </th>
+        <th align="center">  8/13/2020 </th>
+        <th align="center"> Xin Lin, Baiwei Liu </th>
+      </tr>
+      <tr>
+        <th align="center"> Test Trolle and check HTML code </th>
+        <th align="center">   8/13/2020 </th>
+        <th align="center">  8/15/2020 </th>
+        <th align="center"> Yitao Ma, Yuxiang Huang, Wenlao Peng </th>
+      </tr>
+      
     </table>
   </p>
 </div>
