--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body, html {
     <img src="" alt="Yuxiang Huang" style="width:100%" height="250">
   </div>
   <div class="column">
-    <img src="" alt="PWL.jpg" style="width:100%" height="250">
+    <img src="PWL.jpg" alt="Wenlao Peng" style="width:100%" height="250">
   </div>
   <div class="column">
     <img src="" alt="Hang Yang" style="width:100%" height="250">
